build: remove unused files

--- a/plugins/splatoon2/package.json
+++ b/plugins/splatoon2/package.json
@@ -10,7 +10,9 @@
     "dist"
   ],
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "keywords": [
     "chatbot",
     "koishi",
