--- a/koishi.yml
+++ b/koishi.yml
@@ -1,14 +1,19 @@
 port: 5140
 maxPort: 5149
-
 plugins:
-  help:
-  suggest:
+  help: null
+  suggest: null
   console:
     open: true
-  logger:
+  logger: null
   market:
     search:
       endpoint: ${{ env.GITHUB_CONTENT_MIRROR }}/koishijs/registry/dist/index.json
-  status:
-  sandbox:
+  status: null
+  sandbox: null
+  adapter-kook:
+    protocol: ws
+    token: ${{ env.KOOK_TOKEN }}
+prefix:
+  - .
+  - ","
