--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "esbuild": "^0.14.51",
     "esbuild-register": "^3.3.3",
     "typescript": "^4.7.4",
-    "yml-register": "^1.0.0",
     "yakumo": "^0.3.1",
     "yakumo-publish": "^0.3.0",
     "yakumo-upgrade": "^0.3.1",
-    "yakumo-version": "^0.3.0"
+    "yakumo-version": "^0.3.0",
+    "yml-register": "^1.0.0"
   },
   "dependencies": {
     "@koishijs/cli": "^4.8.3",
     "@koishijs/plugin-adapter-discord": "^3.0.3",
+    "@koishijs/plugin-adapter-kook": "^3.1.1",
     "@koishijs/plugin-adapter-onebot": "^5.0.7",
     "@koishijs/plugin-adapter-telegram": "^3.1.3",
     "@koishijs/plugin-console": "^4.3.1",
