--- a/plugins/splatoon2/package.json
+++ b/plugins/splatoon2/package.json
@@ -11,7 +11,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "keywords": [
     "chatbot",
@@ -20,5 +21,8 @@
   ],
   "peerDependencies": {
     "koishi": "^4.8.3"
+  },
+  "dependencies": {
+    "canvaskit-wasm": "^0.35.0"
   }
 }
